<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PHOTOSYNQ</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="research_project_str">Research Projects</string>
    <string name="quick_measurement_str">Quick Measurement</string>
    <string name="exit_btn">Exit</string>
    <string name="title_activity_project_description">Project Details</string>
    <string name="no_data_found">No Data Found</string>
    <string name="start_measure">Click to start measurement</string>
    <string name="participate">Participate</string>
    <string name="end_date_lbl">End Date:</string>
    <string name="start_date_lbl">Start Date:</string>
    <string name="beta_lbl">Beta:</string>
    <string name="title_activity_directions">Directions</string>
    <string name="image_desc">Image Description</string>
    <string name="next">Next</string>
    <string name="directions_to_collab">Directions to collaborators</string>
    <string name="title_activity_bluetooth">Connect Device via Bluetooth</string>
    <string name="title_activity_new_measurment">Measurement Details</string>
    <string name="choose_option">Choose Option</string>
    <string name="title_activity_display_results">Results</string>
    <string name="title_activity_select_protocol">Select Measurement Protocol</string>
    <string name="title_activity_connection">Select Measurement Device (bluetooth)</string>
    <string name="title_activity_data">Select User-defined Data</string>
    <string name="title_activity_mode">Select Measurement Mode</string>
    <string name="title_activity_select_project">Select Project</string>
    <string name="title_activity_review">Review All Settings</string>
    <string name="title_activity_select_user">Select User</string>
    <string name="title_activity_select_sync_options">Data Sync Options</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="action_different_device">Select Device</string>
    <string name="action_criteria">Direction Details</string>
    <string name="action_protocol_desc">Protocol Details</string>
    <string name="action_back_to_projects">Project List</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="refresh">Refresh</string>
    <string name="clearCache">Clear Cache</string>
    <string name="Pro_list_status">Loading....…</string>
    <string name="error_sending_data">There was a problem saving your data with Photosynq server, But your data is safe and we will try to save it again in %1$s minutes.</string>
    <string name="server_not_reachable">Photosynq server is not reachable.</string>
    <string name="result_discarded">Results discarded.</string>
    <string name="discard">Discard</string>
    <string name="ok">OK</string>
    <string name="data_uploaded_to_server">Your data was successfully uploaded to the Photosynq server.</string>
    <string name="keep_data">Keep Data Successfully</string>
    <string name="sync_successful">Sync successful!</string>
    <string name="measure_btn">+ Take Measurement</string>
    <string name="streamlined_mode">Project Measurement</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="quick_measure_mode">Quick Measurement</string>
    <string name="sign_out">Sign Out</string>
    <string name="close">Close</string>
    <string name="review">Review</string>
    <string name="searchNew">Search New</string>
    <string name="change_user">Change User</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="paired">Paired</string>
    <string name="pairDevice">Pair Device</string>
    <string name="save_interval_btn">Save interval</string>
    <string name="sync_btn">Sync Data</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="sync_interval_lbl">Sync interval (in mins)</string>
    <string name="sync_time_msg">Time between Sync attempts with website. Sync includes projects, protocols, macros, and data.</string>
    <string name="userSelected">User Selected</string>
    <string name="selectFromWeb">Set of answers cannot be changed here.  If you are the project lead, you can change the set of answers by editing the project</string>
    <string name="fixedValue">Fixed value</string>
    <string name="autoIncrement">Auto Increment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="repeat">Repeat</string>
    <string name="scanCode">Scan Bar/QR code</string>
    <string name="save">Save</string>
    <string name="mode">Mode</string>
    <string name="connection_lbl">Connection</string>
    <string name="project_lbl">Project</string>
    <string name="scan">Scan</string>
    <string name="scan_result">Scan Result</string>
    <string name="project_not_selected">No project selected</string>
    <string name="no_que_for_project_selected">No Questions for project selected</string>
    <string name="no_hardware_selection">No hardware selected</string>
    <string name="no_porject_selected">Please select project.</string>
    <string name="busy">busy</string>
    <string name="connected">Connected, Click to start measurement</string>
    <string name="show_all_protocols">Show All Protocols</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading_progress">syncing data with PhotosynQ.org, please wait...</string>
    <string name="title_activity_user_profile">UserProfile</string>

</resources>
