<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/question_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:lines="3"
        android:text="@string/no_data_found"
        android:textColor="@color/white"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/question_txt"
        android:layout_above="@+id/data_fragment_save_btn"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/select_from_web_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selectFromWeb" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroupQuestionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/user_select_radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userSelected" />

                    <RadioButton
                        android:id="@+id/fixedvalueradio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/fixedValue"
                        android:paddingTop="5dp"/>

                    <EditText
                        android:id="@+id/fixed_value_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter value"
                        android:layout_marginLeft="20dp"/>

                    <RadioButton
                        android:id="@+id/autoincrementradio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/autoIncrement"
                        />

                    <RelativeLayout
                        android:id="@+id/subRelativeRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:id="@+id/from_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/from"/>

                        <EditText
                            android:id="@+id/from_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:ems="10"
                            android:inputType="number" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/subRelativeRadio1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:id="@+id/to_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/to" />

                        <EditText
                            android:id="@+id/to_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:ems="10"
                            android:inputType="number" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/subRelativeRadio2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:id="@+id/repeat_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/repeat" />

                        <EditText
                            android:id="@+id/repeat_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:ems="10"
                            android:inputType="number" />
                    </RelativeLayout>

                    <RadioButton
                        android:id="@+id/scanCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scanCode" />
                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/data_fragment_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green_google_play"
        android:text="@string/save"
        android:textSize="25sp" />

</RelativeLayout>