<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#D6D6D6"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_card_background"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/reviewTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/review"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/mode_lbl"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/mode_text"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/no_data_found"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/user_lbl"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:text="@string/userSelected"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_text"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/no_data_found" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/connection_lbl"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/connection_lbl"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/connection_text"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:textSize="20sp"
                    android:text="@string/no_data_found" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/project_lbl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/project_lbl"
                    android:layout_weight=".4"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/project_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:textSize="20sp"
                    android:text="@string/no_porject_selected" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableLayout
                    android:id="@+id/questionsTable"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:stretchColumns="*"/>

            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>