<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:clickable="true"
	android:focusable="true"
	android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/relativelayout_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
         >

            <TextView
                android:id="@+id/syncintervallbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/sync_interval_lbl"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/interval_time_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/syncintervallbl"
                android:ems="10"
                android:text="120"
                android:inputType="number" >
            </EditText>

   
            <Button
                android:id="@+id/save_btn"
                android:layout_below="@+id/interval_time_editText"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:text="@string/save_interval_btn"
                android:textSize="25sp" >
            </Button>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
         >

        <Button
            android:id="@+id/sync_btn"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:text="@string/sync_btn"
            android:textSize="25sp" >
        </Button>
    </RelativeLayout>

</RelativeLayout>