<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#D6D6D6"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_card_background"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/reviewTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/review"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearlayoutoptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp" >
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">
 		<TextView
            android:id="@+id/statusMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_measure"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="12sp" />
        <Button
            android:id="@+id/measure_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_btn" >
        </Button>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>